@@ -1,9 +1,13 @@
 2007-06-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/server/exmpp_server_sasl.erl (next_step),
-	src/server/exmpp_server_session.erl (want_establishment): Return an
-	error if the given stanza is unexpected. If the argument isn't an
+	src/server/exmpp_server_session.erl (want_establishment),
+	src/server/exmpp_server_binding.erl (wished_resource): Return an error
+	if the given stanza is unexpected. If the argument isn't an
 	#xmlnselement{}, it still raises an function clause EXIT.
+
+	* src/server/exmpp_server_binding.erl (error): Add the
+	`not-authorized' case.
 
 2007-05-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
